--- a/OBJETOS/EJERCICIO14/eejrcicio14.html
+++ b/OBJETOS/EJERCICIO14/eejrcicio14.html
@@ -7,17 +7,12 @@
 </head>
 <body>
 
-    <h1>CREANDO OBJETO SIMPLE</h1>
-
-    <input id="nombre" type="text" placeholder="Introduce tu nombre...">
-    <input id="apellido" type="text" placeholder="Introduce tu nombre...">
-    <input id="edad type="text" placeholder="Introduce tu nombre...">
-
-    <ul id="usuarios"></ul>
-
-    <button id="btn" value="Ver Objetos">Ver</button>
-    <button id="ocultar" value="Ver Datos">Ocultar</button>
-
+    <h1>VER DATOS DE OBJETO</h1>
+    <input id="nombre" type="text" placeholder="Introduce un nombre...">
+    <input id="apellido" type="text" placeholder="Introduce un apellido...">
+    <input id="edad" type="number" placeholder="Introduce una edad...">
+    <p></p>
+    <button id="btn">Ver Objeto</button>
     <script src="ejercicio14.js"></script>
     
 </body>
