--- a/variables/variables.html
+++ b/variables/variables.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Document</title>
+    <title>VARIABLES</title>
 </head>
 <body>
     <h2>Ejemplo de operaciones con variables</h2>
