--- a/EJERCICIO 17/ejercicio17.html
+++ b/EJERCICIO 17/ejercicio17.html
@@ -15,7 +15,7 @@
     </style>
 
 <div class="descubre">
-    <h1>La puntuación es...</h1>
+    <h1>Consulta puntuación</h1>
 
     <input type="number" id="entrada" placeholder="escribe la puntuación">
     <button id="btn">Ver puntuación</button>
